Updates to behaviors

--- a/svg-progress-behavior.html
+++ b/svg-progress-behavior.html
@@ -104,5 +104,5 @@
     }
   };
 
-  hc.SvgProgressBehavior = [Polymer.IronResizableBehavior, SvgProgressBehaviorImpl];
+  hc.SvgProgressBehavior = [Polymer.IronResizableBehavior, hc.SvgUtilBehavior, SvgProgressBehaviorImpl];
 </script>
