--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>s-circle-progress</title>
+    <title>hc-circle-progress</title>
 
     <script src="../webcomponentsjs/webcomponents-lite.js"></script>
 
     <link rel="import" href="../iron-component-page/iron-component-page.html">
   </head>
   <body>
-    <iron-component-page src="s-circle-progress.html"></iron-component-page>
+    <iron-component-page src="hc-circle-progress.html"></iron-component-page>
   </body>
 </html>
