--- a/svg-util-behavior.html
+++ b/svg-util-behavior.html
@@ -5,7 +5,8 @@
   // Ensure our namespace is available
   window.hc = window.hc || {};
 
-  const SvgUtilBehavior = {
+  /** @polymerBehavior hc.SvgUtilBehavior */
+  hc.SvgUtilBehavior = {
 
     /**
      * Helper function to get the total length of various SVG Elements
@@ -116,5 +117,4 @@
     },
   };
 
-  hc.SvgUtilBehavior = [SvgUtilBehavior];
 </script>
