--- a/hc-circle-progress.html
+++ b/hc-circle-progress.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../polymer/polymer.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../paper-styles/default-theme.html">
-<link rel="import" href="./svg-progress-behavior.html">
+<link rel="import" href="svg-progress-behavior.html">
 
 <!--
 `hc-circle-progress`
@@ -11,126 +11,122 @@ Polymer-based web component displaying a circular progress bar.
 -->
 
 <dom-module id="hc-circle-progress">
-<template>
+  <template>
 
-<style>
+    <style>
 
-:host {
-  @apply(--layout-vertical);
-  @apply(--layout-center-center);
+      :host {
+        @apply(--layout-vertical);
+        @apply(--layout-center-center);
 
-  position: relative;
+        position: relative;
 
-  width: 64px;
-  height: 64px;
-  margin: 24px;
+        width: 80px;
+        height: 80px;
+        margin: 24px;
 
-  border-radius: 50%;
-}
+        border-radius: 50%;
+      }
 
-svg {
-  position: absolute;
-  top: 0;
-  left: 0;
+      svg {
+        position: absolute;
+        top: 0;
+        left: 0;
 
-  display: none;
-}
+        display: none;
+      }
 
-.Circle-background {
-  stroke: var(--hc-circle-progress-bg-stroke-color, --paper-grey-100);
-}
+      .Circle-background {
+        stroke: var(--hc-circle-progress-bg-stroke-color, --paper-grey-100);
+      }
 
-.Circle-foreground {
-  transition: stroke-dashoffset 150ms;
+      .Circle-foreground {
+        transition: stroke-dashoffset 150ms;
 
-  stroke: var(--hc-circle-progress-stroke-color, --accent-color);
-  stroke-linecap: var(--hc-circle-progress-stroke-linecap, round);
-}
+        stroke: var(--hc-circle-progress-stroke-color, --accent-color);
+        stroke-linecap: var(--hc-circle-progress-stroke-linecap, round);
+      }
 
-</style>
+    </style>
 
-<svg id="circle" width="100%" height="100%">
-  <circle class="Circle-background"
-      r$="[[_radius]]"
-      cx$="[[_cx]]"
-      cy$="[[_cy]]"
-      fill="transparent"
-      stroke-width$="[[strokeWidth]]" />
-  <circle class="Circle-foreground"
-    id="circle-fg"
-      r$="[[_radius]]"
-      cx$="[[_cx]]"
-      cy$="[[_cy]]"
-      fill="transparent"
-      stroke-width$="[[strokeWidth]]"
-      stroke-dasharray$="[[_dasharray]]"
-      stroke-dashoffset$="[[_dashoffset]]"
-      transform$="[[_transform]]" />
-</svg>
+    <svg id="circle" width="100%" height="100%">
+      <circle class="Circle-background"
+          r$="[[_radius]]"
+          cx$="[[_cx]]"
+          cy$="[[_cy]]"
+          fill="transparent"
+          stroke-width$="[[strokeWidth]][[strokeUnit]]" />
+      <circle class="Circle-foreground"
+          r$="[[_radius]]"
+          cx$="[[_cx]]"
+          cy$="[[_cy]]"
+          fill="transparent"
+          stroke-width$="[[strokeWidth]][[strokeUnit]]"
+          stroke-dasharray$="[[_dasharray]]"
+          stroke-dashoffset$="[[_dashoffset]]"
+          transform$="[[_transform]]" />
+    </svg>
+    <slot></slot>
 
-<slot></slot>
+  </template>
+  <script>
+    Polymer({
+      is: 'hc-circle-progress',
 
-</template>
-<script>
+      behaviors: [
+        hc.SvgProgressBehavior
+      ],
 
-Polymer({
-  is: 'hc-circle-progress',
+      properties: {
+        /**
+         * Starting angle of the progress.
+         */
+        angle: {
+          type: Number,
+          value: -90
+        },
 
-  behaviors: [
-    hc.SvgProgressBehavior
-  ],
+        _cx: {
+          type: Number,
+          value: null
+        },
 
-  properties: {
-    /**
-     * Starting angle of the progress.
-     */
-    angle: {
-      type: Number,
-      value: -90
-    },
+        _cy: {
+          type: Number,
+          value: null
+        },
 
-    _cx: {
-      type: Number,
-      value: null
-    },
+        _radius: {
+          type: Number,
+          computed: '_computeRadius(_cx, _cy, strokeWidth)'
+        },
 
-    _cy: {
-      type: Number,
-      value: null
-    },
+        _transform: {
+          type: String,
+          computed: '_computeTransform(angle, _cx, _cy)'
+        }
+      },
 
-    _radius: {
-      type: Number,
-      computed: '_computeRadius(_cx, _cy, strokeWidth)'
-    },
+      listeners: {
+        "iron-resize": "_onIronResize"
+      },
 
-    _transform: {
-      type: String,
-      computed: '_computeTransform(angle, _cx, _cy)'
-    }
-  },
+      _computeRadius: function(cx, cy, strokeWidth) {
+        return cx && cy ? Math.max(0, Math.min(cx, cy) - strokeWidth / 2) : 0;
+      },
 
-  listeners: {
-    "iron-resize": "_onIronResize"
-  },
+      _computeTransform: function(angle, cx, cy) {
+        return cx && cy ? 'rotate(' + angle + ', ' + cx + ', ' + cy + ')' : '';
+      },
 
-  _computeRadius: function(cx, cy, strokeWidth) {
-    return cx && cy ? Math.max(0, Math.min(cx, cy) - strokeWidth / 2) : 0;
-  },
-
-  _computeTransform: function(angle, cx, cy) {
-    return cx && cy ? 'rotate(' + angle + ', ' + cx + ', ' + cy + ')' : '';
-  },
-
-  _onIronResize: function() {
-    if (this.offsetWidth && this.offsetHeight) {
-      this._computeDashArray(this.$['circle-fg']);
-      this._cx = this.offsetWidth / 2;
-      this._cy = this.offsetHeight / 2;
-      this.$.circle.style.display = 'block';
-    }
-  }
-});
-
-</script>
+      _onIronResize: function() {
+        if (this.offsetWidth && this.offsetHeight) {
+          this._computeDashArray(this.$$('#circle > circle:last-child'));
+          this._cx = this.offsetWidth / 2;
+          this._cy = this.offsetHeight / 2;
+          this.$.circle.style.display = 'block';
+        }
+      }
+    });
+  </script>
 </dom-module>
