--- a/hc-square-progress.html
+++ b/hc-square-progress.html
@@ -11,125 +11,123 @@ Polymer-based web component displaying a circular progress bar.
 -->
 
 <dom-module id="hc-square-progress">
-<template>
+  <template>
 
-<style>
+    <style>
+      :host {
+        @apply(--layout-vertical);
+        @apply(--layout-center-center);
 
-:host {
-  @apply(--layout-vertical);
-  @apply(--layout-center-center);
+        position: relative;
 
-  position: relative;
+        width: 80px;
+        height: 80px;
+        margin: 24px;
 
-  width: 64px;
-  height: 64px;
-  margin: 24px;
+        border-radius: 50%;
+      }
 
-  border-radius: 50%;
-}
+      svg {
+        position: absolute;
+        top: 0;
+        left: 0;
 
-svg {
-  position: absolute;
-  top: 0;
-  left: 0;
+        display: none;
+      }
 
-  display: none;
-}
+      .Circle-background {
+        stroke: var(--hc-square-progress-bg-stroke-color, --paper-grey-100);
+      }
 
-.Circle-background {
-  stroke: var(--hc-square-progress-bg-stroke-color, --paper-grey-100);
-}
+      .Circle-foreground {
+        transition: stroke-dashoffset 150ms;
 
-.Circle-foreground {
-  transition: stroke-dashoffset 150ms;
+        stroke: var(--hc-square-progress-stroke-color, --accent-color);
+        stroke-linecap: var(--hc-square-progress-stroke-linecap);
+      }
+    </style>
 
-  stroke: var(--hc-square-progress-stroke-color, --accent-color);
-  stroke-linecap: var(--hc-square-progress-stroke-linecap, round);
-}
+    <svg id="square" width="100%" height="100%">
+      <rect class="Circle-background"
+          width$="[[_cx]]"
+          height$="[[_cy]]"
+          fill="transparent"
+          stroke-width$="[[strokeWidth]][[strokeUnit]]"
+          />
+      <rect class="Circle-foreground"
+        id="circle-fg"
+          width$="[[_cx]]"
+          height$="[[_cy]]"
+          fill="transparent"
+          stroke-width$="[[strokeWidth]][[strokeUnit]]"
+          stroke-dasharray$="[[_dasharray]]"
+          stroke-dashoffset$="[[_dashoffset]]"
+          />
+    </svg>
 
-</style>
+    <slot></slot>
 
-<svg id="square" width="100%" height="100%">
-  <rect class="Circle-background"
-      width$="[[_cx]]"
-      height$="[[_cy]]"
-      fill="transparent"
-      stroke-width$="[[strokeWidth]]"
-      />
-  <rect class="Circle-foreground"
-    id="circle-fg"
-      width$="[[_cx]]"
-      height$="[[_cy]]"
-      fill="transparent"
-      stroke-width$="[[strokeWidth]]"
-      stroke-dasharray$="[[_dasharray]]"
-      stroke-dashoffset$="[[_dashoffset]]"
-      />
-</svg>
+  </template>
+  <script>
 
-<slot></slot>
+    Polymer({
+      is: 'hc-square-progress',
 
-</template>
-<script>
+      behaviors: [
+        hc.SvgProgressBehavior
+      ],
 
-Polymer({
-  is: 'hc-square-progress',
+      properties: {
+        /**
+         * Starting angle of the progress.
+         */
+        angle: {
+          type: Number,
+          value: -90
+        },
 
-  behaviors: [
-    hc.SvgProgressBehavior
-  ],
+        _cx: {
+          type: Number,
+          value: null
+        },
 
-  properties: {
-    /**
-     * Starting angle of the progress.
-     */
-    angle: {
-      type: Number,
-      value: -90
-    },
+        _cy: {
+          type: Number,
+          value: null
+        },
 
-    _cx: {
-      type: Number,
-      value: null
-    },
+        // _radius: {
+        //   type: Number,
+        //   computed: '_computeRadius(_cx, _cy, strokeWidth)'
+        // },
 
-    _cy: {
-      type: Number,
-      value: null
-    },
+        // _transform: {
+        //   type: String,
+        //   computed: '_computeTransform(angle, _cx, _cy)'
+        // }
+      },
 
-    // _radius: {
-    //   type: Number,
-    //   computed: '_computeRadius(_cx, _cy, strokeWidth)'
-    // },
+      listeners: {
+        "iron-resize": "_onIronResize"
+      },
 
-    // _transform: {
-    //   type: String,
-    //   computed: '_computeTransform(angle, _cx, _cy)'
-    // }
-  },
+      _computeRadius: function(cx, cy, strokeWidth) {
+        return cx && cy ? Math.max(0, Math.min(cx, cy) - strokeWidth / 2) : 0;
+      },
 
-  listeners: {
-    "iron-resize": "_onIronResize"
-  },
+      _computeTransform: function(angle, cx, cy) {
+        return cx && cy ? 'rotate(' + angle + ', ' + cx + ', ' + cy + ')' : '';
+      },
 
-  _computeRadius: function(cx, cy, strokeWidth) {
-    return cx && cy ? Math.max(0, Math.min(cx, cy) - strokeWidth / 2) : 0;
-  },
+      _onIronResize: function() {
+        if (this.offsetWidth && this.offsetHeight) {
+          this._computeDashArray(this.$['circle-fg']);
+          this._cx = this.offsetWidth;
+          this._cy = this.offsetHeight;
+          this.$.square.style.display = 'block';
+        }
+      }
+    });
 
-  _computeTransform: function(angle, cx, cy) {
-    return cx && cy ? 'rotate(' + angle + ', ' + cx + ', ' + cy + ')' : '';
-  },
-
-  _onIronResize: function() {
-    if (this.offsetWidth && this.offsetHeight) {
-      this._computeDashArray(this.$['circle-fg']);
-      this._cx = this.offsetWidth;
-      this._cy = this.offsetHeight;
-      this.$.square.style.display = 'block';
-    }
-  }
-});
-
-</script>
+  </script>
 </dom-module>
